--- a/CmakeLists.txt
+++ b/CmakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required(VERSION 3.2)
 project( Boids )
+add_compile_options("-pg")
+add_link_options("-pg")
 
 include_directories(${PROJECT_SOURCE_DIR}/include/)
 include_directories(${PROJECT_SOURCE_DIR}/src/)
